[update] collect(toList) -> .toList로 변경